# SectionPoint

./: CMakeLists.txt  README.md  SectionPoint.cpp  SectionPoint.h  main.cpp
Code_files/: CMakeLists.txt  PointIO.cpp  SectionPoint.cpp  SectionPoint.h  main.cpp
Code_files/additinial code/generator_points/: generatorPoints.py  route_points.csv
Code_files/additional/dataFiles/: dstu_obshaga_10_to_maneg_2023-05-11_21-29-21.csv  route_points.csv
Code_files/additional/generator_points/: EarthFix.py  generatorPoints.py
Code_files/additionalCode/generator_points/: generatorPoints.py
Code_files/libraries/SerialPort/: main.cpp
Code_files/readcoord/: PointIO.cpp  SectionPoint.cpp  SectionPoint.h  main.cpp
Code_files/serialWriter/: CMakeLists.txt  SerialCom.cpp  SerialCom.h  SerialReader.py  serialMain.cpp  serialWriter.h  serialhui.py
